crates/client-presentation/src/render/snapshots/client_presentation__render__ansi__tests__snapshot_malformed_unterminated.snap
---
source: crates/tui/src/render/ansi.rs
expression: "parse_ansi(\"before\\x1b[38;5\")"
---
- spans:
    - text: before
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
