crates/client-presentation/src/render/snapshots/client_presentation__render__ansi__tests__snapshot_reset_midline.snap
---
source: crates/tui/src/render/ansi.rs
expression: "parse_ansi(\"\\x1b[1;32mok\\x1b[0m done\")"
---
- spans:
    - text: ok
      style:
        fg:
          Named: Green
        bg: Default
        bold: true
        italic: false
        underline: false
      kind: Text
    - text: " done"
      style:
        fg: Default
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
