crates/client-presentation/src/render/snapshots/client_presentation__render__ansi__tests__snapshot_truecolor.snap
---
source: crates/tui/src/render/ansi.rs
expression: "parse_ansi(\"\\x1b[38;2;255;128;0morange\\x1b[0m\")"
---
- spans:
    - text: orange
      style:
        fg:
          Rgb:
            - 255
            - 128
            - 0
        bg: Default
        bold: false
        italic: false
        underline: false
      kind: Text
